Use user-defined values for Java installations
The following sources are supported, first hit wins:

  - System.getProperty("java.home." + version)
  - System.getProperty("java." + version)
  - System.getProperty("jdk.home." + version)
  - System.getProperty("jdk." + version)
  - System.getenv("JAVA_HOME_" + version)
  - System.getenv("JAVA_" + version)
  - ~/.m2/toolchains.xml

You may specify keys like "java.home.8" in a user-defined
'~/.gradle/gradle.properties' file. The platform-tooling-support project
will pass them the test environment for consumption.